--- a/style.css
+++ b/style.css
@@ -54,6 +54,11 @@ main {
     gap: 5rem;
 }
 
+.base-container h2,
+.container-three h2 {
+    display: none;
+}
+
 .bg {
     width: 100%;
     height: 100%;
